src/test/ui/const-generics/types-mismatch-const-args.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/types-mismatch-const-args.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/types-mismatch-const-args.rs:13:41
   |
LL |     let _: A<'a, u32, {2u32}, {3u32}> = A::<'a, u32, {4u32}, {3u32}> { data: PhantomData };
   |            --------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `2u32`, found `4u32`
   |            |
   |            expected due to this
   |
   = note: expected struct `A<'_, _, 2u32, _>`
              found struct `A<'_, _, 4u32, _>`

error[E0308]: mismatched types
  --> $DIR/types-mismatch-const-args.rs:15:41
   |
LL |     let _: A<'a, u16, {2u32}, {3u32}> = A::<'b, u32, {2u32}, {3u32}> { data: PhantomData };
   |            --------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`
   |            |
   |            expected due to this
   |
   = note: expected struct `A<'a, u16, _, _>`
              found struct `A<'b, u32, _, _>`

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
